# naravisuals-lxqt-widgets

./: .gitignore  PKGBUILD  README.md  TODOS.md  WIDGET_EVALUATION.md  archive.sh  fix-ntfs.sh  install.sh  pyproject.toml  refactor.py  run.sh  run_daemon.sh  run_desktop_manager.sh  run_manager.sh  run_manager_legacy.sh  run_sddm_manager.sh  run_theme_store.sh  run_widget.sh  setup.py  startup-clipboard.sh
debian/: control  rules
desktop/: naravisuals-battery.desktop  naravisuals-clipboard-manager.desktop  naravisuals-manager.desktop  naravisuals-media-player.desktop  naravisuals-network-monitor.desktop  naravisuals-pomodoro.desktop  naravisuals-quick-notes.desktop  naravisuals-system-monitor.desktop  naravisuals-tray-enhanced.desktop  naravisuals-weather.desktop  nv-desktop-manager.desktop  nv-manager-legacy.desktop  nv-manager.desktop  nv-sddm-manager.desktop  nv-theme-store.desktop
desktop-panel/: naravisuals-battery.desktop  naravisuals-clipboard-manager.desktop  naravisuals-media-player.desktop  naravisuals-network-monitor.desktop  naravisuals-pomodoro.desktop  naravisuals-quick-notes.desktop  naravisuals-system-monitor.desktop  naravisuals-tray-enhanced.desktop  naravisuals-weather.desktop  naravisuals.desktop
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALL-FEDORA.md  SECURITY.md  THEMING.md  TROUBLESHOOTING.md  WIDGETS.md
naravisuals/: base.py  panel_plugin.py
naravisuals/core/: async_utils.py  base_widget.py  config_manager.py  theme_engine.py
naravisuals/daemon/: __main__.py  dbus_service.py
naravisuals/data_providers/: __init__.py  financial.py  integrations.py  ntfs_mount.py  productivity.py  system.py  todo.py  weather.py
naravisuals/desktop_manager/: __init__.py  app.py
naravisuals/manager/: app.py  control_center.py
naravisuals/sddm_manager/: app.py
naravisuals/templates/: macos_dock.ini  windows_classic.ini
naravisuals/theme_manager/: __init__.py  app.py
naravisuals/theme_manager/data/: themes.json
naravisuals/widgets/: __init__.py  __main__.py  apm_counter.py  audio_visualizer.py  battery.py  bluetooth_radar.py  clipboard_manager.py  container_radar.py  gpu_matrix.py  media_player.py  network_monitor.py  pomodoro.py  quick_notes.py  smart_home.py  system_log.py  system_monitor.py  tray_enhanced.py  weather.py
naravisuals/widgets/integrations/: media_player.py  system_updates.py  tray_enhanced.py  weather.py
naravisuals/widgets/native/: __init__.py  app_menu.py  clock.py  pager.py  system_tray.py  taskbar.py  volume.py
naravisuals/widgets/productivity/: clipboard_manager.py  pomodoro.py  quick_notes.py
naravisuals/widgets/system/: battery.py  kernel_version.py  network_monitor.py  ntfs_mount.py  ping_monitor.py  uptime.py  (+1 more)
native-plugin/: CMakeLists.txt  naravisuals-plugin.cpp
packaging/: build-packages.sh  naravisuals-daemon.service  naravisuals-lxqt-widgets.spec  stock-panel.conf
packaging/flatpak/: org.naravisuals.lxqt-widgets.yml
packaging/pyinstaller/: build.sh  package.py
scripts/: README-PANEL-RESET.md  build-rpm.sh  install-plugin.sh  naravisuals-doctor.sh  naravisuals-launcher  naravisuals-logs.sh  naravisuals-lxqt-scanner.sh  naravisuals-lxqt-validator.sh  naravisuals-panel-reset  naravisuals-remove
tests/: conftest.py  test_core.py  test_manager.py  test_providers.py  test_widgets.py
