[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "naravisuals-lxqt-widgets"
version = "2.0.0"
description = "Advanced panel widgets for LXQt desktop environment"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "NaraVisuals", email = "naranyala@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "PyQt6>=6.5",
    "psutil>=5.8",
    "requests>=2.25",
    "dbus-python>=1.2",
    "notify2>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
naravisuals-manager = "naravisuals.manager.control_center:main"
naravisuals-manager-legacy = "naravisuals.manager.app:main"
naravisuals-daemon = "naravisuals.daemon.__main__:main"
naravisuals-widget = "naravisuals.widgets.__main__:main"
naravisuals-sddm-manager = "naravisuals.sddm_manager.app:main"

[project.urls]
Homepage = "https://github.com/naranyala/naravisuals-lxqt-widgets"
Documentation = "https://github.com/naranyala/naravisuals-lxqt-widgets/tree/main/docs"
Repository = "https://github.com/naranyala/naravisuals-lxqt-widgets"
Issues = "https://github.com/naranyala/naravisuals-lxqt-widgets/issues"

[tool.setuptools.packages.find]
include = ["naravisuals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
